Add basic questionare system

--- a/templates/play.html
+++ b/templates/play.html
@@ -12,11 +12,30 @@
 </head>
 
 <body>
-  <div class="site">
-    <div class="top">
-      Play
-    </div>
-    <div class="content">{% block content %}{% end %}</div>
+  
+  <div class="question">
+    {{ question[1] }}
   </div>
+
+  <div class="person">
+    {{ first[1] }}
+    <form action="" method="post">
+      <input type="hidden" name="question" value="{{ question[0] }}">
+      <input type="hidden" name="yes" value="{{ first[0] }}">
+      <input type="hidden" name="no" value="{{ second[0] }}">
+      <input type="submit" value="more"/>
+    </form>
+  </div>
+
+  <div class="person">
+    {{ second[1] }}
+    <form action="" method="post">
+      <input type="hidden" name="question" value="{{ question[0] }}">
+      <input type="hidden" name="yes" value="{{ second[0] }}">
+      <input type="hidden" name="no" value="{{ first[0] }}">
+      <input type="submit" value="more"/>
+    </form>
+  </div>
+
 </body>
 </html>
