Add basic styling for play page

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,8 @@
     <div class="top">
       Index
     </div>
+    <a href="play">Play</a>
+    <a href="results">Results</a>
     <div class="content">{% block content %}{% end %}</div>
   </div>
 </body>
