Add basic styling to index page

--- a/templates/results.html
+++ b/templates/results.html
@@ -8,7 +8,9 @@
   <meta name="description" content="{{ subtitle }}">
   <meta name="author" content="Andreas Gajdosik">
 
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/results.css">
+  <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
 </head>
 
 <body>
