--- a/templates/index.html
+++ b/templates/index.html
@@ -8,17 +8,34 @@
   <meta name="description" content="{{ subtitle }}">
   <meta name="author" content="Andreas Gajdosik">
 
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
 </head>
 
 <body>
-  <div class="site">
-    <div class="top">
-      Index
-    </div>
-    <a href="play">Play</a>
-    <a href="results">Results</a>
-    <div class="content">{% block content %}{% end %}</div>
+  <div class="logo">
+    Rich5: Psychologická profilace miliardářů
   </div>
+
+  <h1 class="slogan">
+    Je Petr Kellner samotář?
+  </h1>
+
+  <div class="go">
+    <form action="/play" method="get">
+      <input type="submit" value="Zjistit!" class="button" />
+    </form>
+  </div>
+
+  <footer>
+    <div>
+      <a href="/">hrát</a>
+      <a href="results">výsledky</a>
+    </div>
+    <div>licensed under <a href="https://github.com/raisely/NoHarm/blob/publish/LICENSE.md">NoHarm</a></div> 
+    <div>🄯2020 <a href="https://gajdosik.org"></a></div>
+  </footer>
+
 </body>
 </html>
