--- a/templates/play.html
+++ b/templates/play.html
@@ -8,6 +8,7 @@
   <meta name="description" content="{{ subtitle }}">
   <meta name="author" content="Andreas Gajdosik">
 
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/play.css">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
 </head>
