Add BigFive algorithm

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,8 +30,9 @@
 
   <footer>
     <div>
-      <a href="/">hrát</a>
+      <a href="play">hrát</a>
       <a href="results">výsledky</a>
+      <a href="profile?id=1">profil</a>
     </div>
     <div>licensed under <a href="https://github.com/raisely/NoHarm/blob/publish/LICENSE.md">NoHarm</a></div> 
     <div>🄯2020 <a href="https://gajdosik.org"></a></div>
