Move profile and bigfive to different modules

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -16,8 +16,8 @@
 <body>
 
   <div class="heading">
-    <span class="question">{{ personality["name"] }}</span>
-    <img src="img/{{personality['id']}}.jpg">
+    <span class="question">{{ profile["name"] }}</span>
+    <img src="img/{{profile['id']}}.jpg">
     <span>Extroversion: {{ personality["extroversion"] }}, {{ personality["extroversion"]/personality["average"] }}</span>
     <span>Agreeableness: {{ personality["agreeableness"] }}, {{ personality["agreeableness"]/personality["average"] }}</span>
     <span>Conscientiousness: {{ personality["conscientiousness"] }}, {{ personality["conscientiousness"]/personality["average"] }}</span>
