--- a/templates/play.html
+++ b/templates/play.html
@@ -7,6 +7,7 @@
   <title>Unusual Subjects: {{ subtitle }}</title>
   <meta name="description" content="{{ subtitle }}">
   <meta name="author" content="Andreas Gajdosik">
+  <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/play.css">
