Add czech versions of questions

--- a/templates/play.html
+++ b/templates/play.html
@@ -17,7 +17,7 @@
 <body>
 
   <div class="heading">
-    <span class="question">Which one {{ question[1] }}?</span>
+    <span class="question">{{ question[3] }} {{ question[4] }}</span>
     <span class="closer">kliknutím označte danou osobu</span>
   </div>
 
