--- a/css/profile.css
+++ b/css/profile.css
@@ -3,6 +3,7 @@
     justify-content: center;
     flex-direction: column;
     text-align: center;
+    align-items: center;
     margin: 100px 50px 100px 50px;
 }
 
@@ -10,17 +11,8 @@
     font-size: 2em;
 }
 
-.persons {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.submit {
-    width: 400px;
-    height: 400px;
-    border: none;
-    cursor: pointer;
-    background-size: cover;
+.graph {
+    max-width: 400px;
 }
 
 @media all and (max-width: 900px) {
