--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,8 +10,10 @@
   <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/play.css">
+  <link rel="stylesheet" type="text/css" href="css/profile.css">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
+
+  <script src="js/Chart.js"></script>
 </head>
 
 <body>
@@ -24,8 +26,8 @@
     <span>Svědomitost: {{ personality["conscientiousness"] }}, {{ personality["conscientiousness"]/personality["average"] }}</span>
     <span>Neurotismus: {{ personality["neuroticism"] }}, {{ personality["neuroticism"]/personality["average"] }}</span>
     <span>Otevřenost: {{ personality["openness"] }}, {{ personality["openness"]/personality["average"] }}</span>
+    <canvas id="myChart" class="graph" width="400px" height="400px"></canvas>
   </div>
-
 
   <footer>
     <div>
@@ -37,4 +39,48 @@
   </footer>
 
 </body>
+<script>
+var ctx = document.getElementById('myChart').getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: ['Extroverze', 'Přívětivost', 'Svědomitost', 'Neurotismus', 'Otevřenost'],
+        datasets: [{
+            label: 'odchylka',
+            data: [
+              {{(personality["extroversion"]/personality["average"]-1)*100}} ,
+              {{(personality["agreeableness"]/personality["average"]-1)*100}},
+              {{(personality["conscientiousness"]/personality["average"]-1)*100}},
+              {{(personality["neuroticism"]/personality["average"]-1)*100}},
+              {{(personality["openness"]/personality["average"]-1)*100}}
+            ],
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)',
+                'rgba(153, 102, 255, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255, 99, 132, 1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)',
+                'rgba(153, 102, 255, 1)'
+            ],
+            borderWidth: 1
+        }]
+    },
+    options: {
+      title: {
+        display: true,
+        text: '{{ profile["name"] }}: BigFive skóre',
+      },
+      legend: {
+        display: false,
+      }
+    }
+});
+</script>
+
 </html>
