Rebrand to nejvyzkum.cz

--- a/templates/play.html
+++ b/templates/play.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Unusual Subjects: {{ subtitle }}</title>
+  <title>Nejvyzkum.cz - {{ subtitle }}</title>
   <meta name="description" content="{{ subtitle }}">
   <meta name="author" content="Andreas Gajdosik">
   <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
