--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Unusual Subjects: {{ subtitle }}</title>
+  <title>Nejvyzkum.cz - {{ subtitle }}</title>
   <meta name="description" content="{{ subtitle }}">
   <meta name="author" content="Andreas Gajdosik">
   <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
@@ -16,7 +16,7 @@
 
 <body>
   <div class="logo">
-    Rich5: Psychologická profilace miliardářů
+    Nejlepší z možných výzkumů!
   </div>
 
   <h1 class="slogan">
