Remove obsolete results page

--- a/templates/play.html
+++ b/templates/play.html
@@ -43,10 +43,9 @@
 
   <footer>
     <div>
-      <a href="/">Home</a>
-      <a href="results">Results</a>
+      <a href="/">home</a>
+      <a href="profile?id=1">profil</a>
     </div>
-    <div>licensed under <a href="https://github.com/raisely/NoHarm/blob/publish/LICENSE.md">NoHarm</a></div> 
     <div>🄯2020 <a href="https://gajdosik.org"></a></div>
   </footer>
 
