--- a/templates/profile.html
+++ b/templates/profile.html
@@ -37,10 +37,9 @@
 
   <footer>
     <div>
-      <a href="/">Home</a>
-      <a href="results">Results</a>
+      <a href="/">home</a>
+      <a href="play">hrát</a>
     </div>
-    <div>licensed under <a href="https://github.com/raisely/NoHarm/blob/publish/LICENSE.md">NoHarm</a></div> 
     <div>🄯2020 <a href="https://gajdosik.org"></a></div>
   </footer>
 
