--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,7 +32,8 @@
     <span>Psychocismus: {{ scl90["psychoticism"] }}</span>
     <span>Obecná závažnost: {{ scl90["general"] }}</span>
 
-    <canvas id="myChart" class="graph" width="400px" height="400px"></canvas>
+    <canvas id="scl90Graph" class="graph" width="800px" height="800px"></canvas>
+    <canvas id="bigFiveGraph" class="graph" width="400px" height="400px"></canvas>
   </div>
 
   <footer>
@@ -44,9 +45,94 @@
   </footer>
 
 </body>
+
 <script>
-var ctx = document.getElementById('myChart').getContext('2d');
-var myChart = new Chart(ctx, {
+
+var chartData = {
+			labels: ['Somatizace', 'Obsese-Kompulze', 'Hypersenzitivita', 'Deprese', 'Anxiozita', 'Hostilita', 'Fóbie', 'Paranoidita', 'Psychocismus', 'Obecná závažnost'],
+			datasets: [{
+				type: 'line',
+        showLine: false,
+        pointStyle: 'line',
+        pointRadius: 18,
+        borderWidth: 5,
+				label: 'Hranice onemocnění',
+        backgroundColor: "red",
+				borderColor: "red",
+				data: [
+					0.81,
+					1.07,
+					0.99,
+					0.99,
+					1.23,
+					0.78,
+					0.54,
+          0.80,
+          0.50,
+          0.89
+				]
+			}, {
+				type: 'line',
+        showLine: false,
+        pointStyle: 'line',
+        pointRadius: 18,
+        borderWidth: 5,
+				label: 'Hranice normy',
+				backgroundColor: "orange",
+        borderColor: 'orange',
+				data: [
+          0.75,
+					0.99,
+					0.65,
+					0.66,
+					0.80,
+					0.71,
+					0.36,
+          0.61,
+          0.34,
+          0.64
+				]
+			}, {
+				type: 'bar',
+				label: 'Naměřená hodnota',
+				backgroundColor: "green",
+				data: [
+          {{ scl90["somatization"] }},
+					{{ scl90["obsessiveCompulsive"] }},
+					{{ scl90["interpersonalSensitivity"] }},
+					{{ scl90["depression"] }},
+					{{ scl90["anxiety"] }},
+					{{ scl90["hostility"] }},
+					{{ scl90["phobicAnxiety"] }},
+          {{ scl90["paranoidIdeation"] }},
+          {{ scl90["psychoticism"] }},
+          {{ scl90["general"] }}
+				]
+			}]
+
+		};
+
+
+var scl = document.getElementById('scl90Graph').getContext('2d');
+var sclChart = new Chart(scl, {
+  type: 'bar',
+	data: chartData,
+	options: {
+		responsive: true,
+		title: {
+			display: true,
+			text: '{{ profile["name"] }}: Symptom Checklist 90',
+		},
+		tooltips: {
+			mode: 'index',
+			intersect: true
+		}
+	}
+});
+
+
+var bfg = document.getElementById('bigFiveGraph').getContext('2d');
+var bigFiveChart = new Chart(bfg, {
     type: 'bar',
     data: {
         labels: ['Extroverze', 'Přívětivost', 'Svědomitost', 'Neurotismus', 'Otevřenost'],
