Redirect to random profile if needed

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
   <footer>
     <div>
       <a href="play">hrát</a>
-      <a href="profile?id=1">profil</a>
+      <a href="profile">profil</a>
     </div>
     <div>🄯2020 <a href="https://gajdosik.org"></a></div>
   </footer>
