--- a/templates/play.html
+++ b/templates/play.html
@@ -54,7 +54,7 @@
   <footer>
     <div>
       <a href="/">home</a>
-      <a href="profile?id=1">profil</a>
+      <a href="profile">profil</a>
     </div>
     <div>🄯2020 <a href="https://gajdosik.org"></a></div>
   </footer>
