--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,19 @@
   <meta charset="utf-8">
 
   <title>Nejvyzkum.cz - {{ subtitle }}</title>
-  <meta name="description" content="{{ subtitle }}">
+  <meta name="description" content="Nejvyzkum.cz - {{ subtitle }}">
   <meta name="author" content="Andreas Gajdosik">
   <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <link rel="stylesheet" type="text/css" href="css/index.css">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
+
+  <meta property="og:title" content="Nejvyzkum.cz - {{ subtitle }}">
+  <meta property="og:description" content="Nahlížíme do duše nejbohatších. Zkrátka ten nejlepší z možných výzkumů!">
+  <meta property="og:image" content="/favicon.ico">
+  <meta property="og:url" content="https://www.nejvyzkum.cz">
+  <meta name="twitter:card" content="summary_large_image">
 </head>
 
 <body>
