Add image for FB previews

--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 
   <meta property="og:title" content="Nejvyzkum.cz - {{ subtitle }}">
   <meta property="og:description" content="Nahlížíme do duše nejbohatších. Zkrátka ten nejlepší z možných výzkumů!">
-  <meta property="og:image" content="/favicon.ico">
+  <meta property="og:image" content="http://myelin.org/wp-content/uploads/2017/08/image05.jpg">
   <meta property="og:url" content="https://www.nejvyzkum.cz">
   <meta name="twitter:card" content="summary_large_image">
 </head>
