Prepare for Corona - move 7th class to one module

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
   <meta name="author" content="Andreas Gajdosik">
   <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/css/index.css">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
 
   <meta property="og:title" content="Nejvyzkum.cz - {{ subtitle }}">
@@ -40,17 +40,17 @@
   </h1>
 
   <div class="go">
-    <form action="/play" method="get">
+    <form action="/sedma-trida" method="get">
       <input type="submit" value="Zjistit!" class="button" />
     </form>
   </div>
 
   <footer>
     <div>
-      <a href="play">hrát</a>
-      <a href="profile">profil</a>
+      <a href="sedma-trida">hrát</a>
+      <a href="sedma-trida/profil">profil</a>
     </div>
-    <div>🄯2020 <a href="https://gajdosik.org"></a></div>
+    <div>🄯2020 Simkova, Gajdosik</div>
   </footer>
 
 </body>
