--- a/templates/sedma/main.html
+++ b/templates/sedma/main.html
@@ -20,7 +20,7 @@
   <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 
   <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/play.css">
+  <link rel="stylesheet" type="text/css" href="css/sedma/main.css">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
 
   <meta property="og:title" content="Nejvyzkum.cz - {{ subtitle }}">
@@ -60,7 +60,7 @@
   <footer>
     <div>
       <a href="/">home</a>
-      <a href="profile">profil</a>
+      <a href="sedma-trida/profil">profil</a>
     </div>
     <div>🄯2020 <a href="https://gajdosik.org"></a></div>
   </footer>
