--- a/templates/sedma/profil.html
+++ b/templates/sedma/profil.html
@@ -19,11 +19,11 @@
   <meta name="author" content="Andreas Gajdosik">
   <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/profile.css">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/css/sedma/profil.css">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
 
-  <script src="js/Chart.js"></script>
+  <script src="/js/Chart.js"></script>
 
   <meta property="og:title" content="Nejvyzkum.cz - {{ profile['name'] }}">
   <meta property="og:description" content="Přehled osobnostních výsledků z námi získaných dat. Zkrátka výsledky toho nejlepšího z možných výzkumů!">
@@ -46,7 +46,7 @@
   <footer>
     <div>
       <a href="/">home</a>
-      <a href="play">hrát</a>
+      <a href="/sedma-trida">hrát</a>
     </div>
     <div>🄯2020 <a href="https://gajdosik.org"></a></div>
   </footer>
