--- a/templates/sedma/zajimavost.html
+++ b/templates/sedma/zajimavost.html
@@ -18,8 +18,8 @@
   <meta name="author" content="Andreas Gajdosik">
   <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/reward.css">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/css/sedma/zajimavost.css">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
 
   <meta property="og:title" content="Nejvyzkum.cz - 404">
@@ -40,7 +40,7 @@
   </div>
 
   <div class="go">
-    <form action="/play" method="get">
+    <form action="/sedma-trida" method="get">
       <input type="submit" value="Chci víc!" class="button" />
     </form>
   </div>
