Add links to portfolios

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,11 @@
       <a href="sedma-trida">hrát</a>
       <a href="sedma-trida/profil">profil</a>
     </div>
-    <div>🄯2020 Simkova, Gajdosik</div>
+    <div>
+      🄯2020
+      <a href="https://barborasimkova.cz">Šimková</a>,
+      <a href="https://gajdosik.org">Gajdošík</a>
+    </div>
   </footer>
 
 </body>
