Move also index of 7th class

--- a/templates/sedma/hrat.html
+++ b/templates/sedma/hrat.html
@@ -19,8 +19,8 @@
   <meta name="author" content="Andreas Gajdosik">
   <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 
-  <link rel="stylesheet" type="text/css" href="css/main.css">
-  <link rel="stylesheet" type="text/css" href="css/sedma/main.css">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/css/sedma/main.css">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
 
   <meta property="og:title" content="Nejvyzkum.cz - {{ subtitle }}">
@@ -59,10 +59,14 @@
 
   <footer>
     <div>
-      <a href="/">home</a>
-      <a href="sedma-trida/profil">profil</a>
+      <a href="/">nejvyzkum.cz</a>/<a href="/sedma-trida">7.třída</a>:
+      <a href="/sedma-trida/hrat">hrát</a> - <a href="/sedma-trida/profil">profil</a>
     </div>
-    <div>🄯2020 <a href="https://gajdosik.org"></a></div>
+    <div>
+      🄯2020
+      <a href="https://barborasimkova.cz">Šimková</a>,
+      <a href="https://gajdosik.org">Gajdošík</a>
+    </div>
   </footer>
 
 </body>
