--- a/templates/sedma/profil.html
+++ b/templates/sedma/profil.html
@@ -45,10 +45,14 @@
 
   <footer>
     <div>
-      <a href="/">home</a>
-      <a href="/sedma-trida">hrát</a>
+      <a href="/">nejvyzkum.cz</a>/<a href="/sedma-trida">7.třída</a>:
+      <a href="/sedma-trida/hrat">hrát</a> - <a href="/sedma-trida/profil">profil</a>
     </div>
-    <div>🄯2020 <a href="https://gajdosik.org"></a></div>
+    <div>
+      🄯2020
+      <a href="https://barborasimkova.cz">Šimková</a>,
+      <a href="https://gajdosik.org">Gajdošík</a>
+    </div>
   </footer>
 
 </body>
