--- a/templates/sedma/hrat.html
+++ b/templates/sedma/hrat.html
@@ -20,7 +20,7 @@
   <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 
   <link rel="stylesheet" type="text/css" href="/css/main.css">
-  <link rel="stylesheet" type="text/css" href="/css/sedma/main.css">
+  <link rel="stylesheet" type="text/css" href="/css/sedma/hrat.css">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
 
   <meta property="og:title" content="Nejvyzkum.cz - {{ subtitle }}">
