--- a/templates/sedma/zajimavost.html
+++ b/templates/sedma/zajimavost.html
@@ -13,8 +13,8 @@
 
   <meta charset="utf-8">
 
-  <title>Nejvyzkum.cz - 404</title>
-  <meta name="description" content="Nejvyzkum.cz - 404">
+  <title>Nejvyzkum.cz - {{ subtitle }}</title>
+  <meta name="description" content="Nejvyzkum.cz - {{ subtitle }}">
   <meta name="author" content="Andreas Gajdosik">
   <link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 
@@ -22,10 +22,10 @@
   <link rel="stylesheet" type="text/css" href="/css/sedma/zajimavost.css">
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
 
-  <meta property="og:title" content="Nejvyzkum.cz - 404">
-  <meta property="og:description" content="Něco se ošklivě pokazilo a určitě je to jen a jen vaše chyba. Tak držte hubu a krok a přidejte!">
+  <meta property="og:title" content="Nejvyzkum.cz - {{ subtitle }}">
+  <meta property="og:description" content="Náhodná zajímavost z duševního světa nejbohatších. Tomu neuvěříte.">
   <meta property="og:image" content="/favicon.ico">
-  <meta property="og:url" content="https://www.nejvyzkum.cz/404">
+  <meta property="og:url" content="https://www.nejvyzkum.cz/sedma-trida/zajimavost">
   <meta name="twitter:card" content="summary_large_image">
 </head>
 
@@ -40,7 +40,7 @@
   </div>
 
   <div class="go">
-    <form action="/sedma-trida" method="get">
+    <form action="/sedma-trida/hrat" method="get">
       <input type="submit" value="Chci víc!" class="button" />
     </form>
   </div>
