--- a/css/index.css
+++ b/css/index.css
@@ -1,27 +1,10 @@
-
-.logo{
-    text-align: center;
-    margin: 100px;
+.menu{
+    margin: 150px 0px 0px 0px;
 }
 
-.slogan {
-    text-align: center;
-    margin: 200px;
-}
-
-.go {
-    text-align: center;
-}
-
-.button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 2em;
-    font-family: hack;
-    cursor: pointer;
+.buttons {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin: 20px 0px;
 }
