Fix buttons on index page

--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,8 @@
 
 .buttons {
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
-    justify-content: space-between;
+    justify-content: center;
     margin: 20px 0px;
 }
