Add emoticons to 7th class

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,8 +41,7 @@
     Zkoumáme současný režim a jeho představitele.
     Pátráme po psychice a morálních hodnotách nejbohatších.
     Chceme vědět to, co by nám nikdy neřekli.
-    Zkoumáme nezkoumatelné.
-    Jdeme za hranice možností výzkumu - zkrátka nejlepší z možných výzkumů!
+    Jdeme za hranice možností výzkumu.
   </p>
 
 
