--- a/templates/sedma/index.html
+++ b/templates/sedma/index.html
@@ -28,6 +28,7 @@
   <meta property="og:image" content="http://myelin.org/wp-content/uploads/2017/08/image05.jpg">
   <meta property="og:url" content="https://www.nejvyzkum.cz">
   <meta name="twitter:card" content="summary_large_image">
+  <script src="https://kit.fontawesome.com/96556682ed.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -40,10 +41,16 @@
       Tvář a oči jsou oknem do duše.
       A shodou okolností i jednou z mála věcí, kterou neskryje ani miliardář.
     </p>
+    <div class="icon">
+      <i class="far fa-smile-wink"></i>
+    </div>
     <p class="textcenter">
       V následujícím testu Vám budeme zobrazovat dvojice miliardářů a Vy budete na základě jejich portrétů vybírat toho, který lépe odpovídá položené otázce.
       S Vaší pomocí pak budeme schopni profilovat zkoumané osoby skrze algoritmy psychologických testů SCL90 a BigFive.
     </p>
+    <div class="icon">
+      <i class="far fa-surprise"></i>
+    </div>
     <p class="textcenter">
       Když nám na otázky nechtějí odpovědět oni, musí nám odpovědět jejich tvář a Váš nejlepší úsudek.
       Tak co, pomůžete nám?
@@ -68,4 +75,5 @@
   </footer>
 
 </body>
+
 </html>
