--- a/css/sedma/index.css
+++ b/css/sedma/index.css
@@ -2,7 +2,12 @@ p {
     margin: 50px 0px;
 }
 
+.icon {
+    font-size: 2rem;
+    text-align: center;
+}
+
 .go {
     text-align: center;
-    margin: 200px 0px;
+    margin: 50px 0px;
 }
