Add websocks, basic structure of clients and games

--- a/templates/korona/index.html
+++ b/templates/korona/index.html
@@ -7,6 +7,12 @@
     <script src="script.js"></script>
   </head>
   <body>
-    game
+
+    KORONA-INDEX
+
+    <form action="" method="post">
+      <input type="submit" value="Zalozit hru" class="submit"/>
+    </form>
+
   </body>
 </html>
