Game struct hopefully finished :O

--- a/templates/korona/hra.html
+++ b/templates/korona/hra.html
@@ -10,10 +10,13 @@
     </script>
   </head>
   <body>
-    <div class="suspects">
-      {% for x in range(16) %}
-        <div>{{x}}</div>
-      {% end %}
+
+    <div class="game">
+      <div class="suspects">
+        {% for x in range(16) %}
+          <div>{{x}}</div>
+        {% end %}
+      </div>
     </div>
 
     <button>Potvrdit</button>
