--- a/css/korona/hra.css
+++ b/css/korona/hra.css
@@ -13,3 +13,11 @@
     background-size: contain;
     background-repeat: no-repeat;
 }
+
+#witnessUI {
+    display: none;
+}
+
+#detectiveUI {
+    display: none;
+}
