Handle witness move

--- a/templates/korona/hra.html
+++ b/templates/korona/hra.html
@@ -19,8 +19,8 @@
       <div id="onmove"></div>
       <div id="question"></div>
       <div id="witnessUI">
-        <button id="ANO" onclick="witnessAnswer(true)">ANO</button>
-        <button id="NE" onclick="witnessAnswer(false)">NE</button>
+        <button id="yes" onclick="witnessAnswer(true)">ANO</button>
+        <button id="no" onclick="witnessAnswer(false)">NE</button>
       </div>
       <div id="answer"></div>
       <div id="suspects">
