--- a/css/korona/hra.css
+++ b/css/korona/hra.css
@@ -36,3 +36,13 @@
     width: 100%;
     height: 100%;
 }
+
+#game-over {
+    display: none;
+    font-size: 6em;
+    position: absolute;
+    top: 40vh;
+    left: 30vw;
+    z-index: 10;
+    background-color: red;
+}
