--- a/templates/korona/hra.html
+++ b/templates/korona/hra.html
@@ -14,6 +14,8 @@
 </head>
   <body>
 
+    <div id="game-over">GAME OVER!</div>
+
     <div class="main">
       <div id="role"></div>
       <div id="onmove"></div>
