Create support for End of Game

--- a/templates/korona/hra.html
+++ b/templates/korona/hra.html
@@ -35,7 +35,7 @@
       </div>
 
       <div id="detectiveUI" disabled>
-        <button id="send" onclick="detectiveAnswer()">Potvrdit</button>
+        <button id="send" onclick="detectiveAnswer()">Ukončit tah!</button>
       </div>
     </div>
 
